--- a/part0/0.4_New_note_diagram.md
+++ b/part0/0.4_New_note_diagram.md
@@ -2,14 +2,11 @@ sequenceDiagram
     participant browser
     participant server
 
-    create a note
-
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate server
-    server : Creates a new note {content : text inputted, date : current date}
-             Save new note to data.json
     server-->>browser: URL redirect to https://studies.cs.helsinki.fi/exampleapp/notes
     deactivate server
+    Note right of server: Creates a new note and save that new note to data.json
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
@@ -34,3 +31,4 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes, new note is displayed at the bottom of the notes
+    
