--- a/part0/0.6_New_note_in_Single_page_app_diagram.md
+++ b/part0/0.6_New_note_in_Single_page_app_diagram.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant browser
     participant server
@@ -8,3 +9,4 @@ sequenceDiagram
     deactivate server
     Note right of server: Form data fetched from the server using JavaScript. 
     Note right of server: Updated notes rendered
+```
