--- a/part0/0.4_New_note_diagram.md
+++ b/part0/0.4_New_note_diagram.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant browser
     participant server
@@ -31,4 +32,4 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes, new note is displayed at the bottom of the notes
-    
+```
